# api-bancaria-fastapi

./: .gitignore  .renderignore  README.md  auth.py  blog.db  main.py  pyproject.toml
dio_blog/controllers/: post.py
dio_blog/models/: __init__.py  conta.py  post.py
dio_blog/schemas/: post.py
routers/: transacoes.py
