[tool.poetry]
name = "apis_restful_assincronas"
version = "0.1.0"
description = ""
authors = ["Kaio Henrique <kaiohenriqe1@gmail.com>"]
readme = "README.md"
packages = [
    { include = "dio_blog" }
]
dependencies = {
    "databases": { extras = ["aiosqlite"], version = ">=0.9.0,<0.10.0" },
    "sqlalchemy": "^2.0.0"
}
python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
