[tool.poetry]
name = "apis_restful_assincronas"
version = "0.1.0"
description = ""
authors = ["Kaio Henrique <kaiohenriqe1@gmail.com>"]
readme = "README.md"
packages = [
    { include = "dio_blog" }
]

[tool.poetry.dependencies]
python = ">=3.12"
databases = { extras = ["aiosqlite"], version = ">=0.9.0,<0.10.0" }
sqlalchemy = "^2.0.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"